fix: set overflow and height to pop-up and change markup for e-mail text

--- a/css/style.css
+++ b/css/style.css
@@ -578,6 +578,8 @@ body {
   z-index: 1001;
   left: 50%;
   top: 50%;
+  height: 210px;
+  overflow: auto;
   padding: 40px; 
   transform: translate(-50%, -50%);
   background-color: #ffffff;
